# ml-stock-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  analysis.md  kaggle_runner.py  kernel-metadata.json  pyproject.toml
scripts/: deploy_kaggle.py  run_experiments.py  run_pipeline.py
src/: config.py  data_pipeline.py  dataset.py  evaluate.py  main.py  model_cnn.py  model_lstm.py  strategy.py  train.py
tests/: test_data_pipeline.py  test_dataset.py  test_models.py  test_shape_robustness.py
