[project]
name = "lstm-stock-prediction"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "ta>=0.11.0",
    "torch>=2.12.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "kaggle>=2.2.1",
]
