[project]
name = "lstm-stock-prediction"
version = "0.1.0"
description = "LSTM binary classifier for next-day NASDAQ direction prediction"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "ta>=0.11.0",
    "torch>=2.12.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "kaggle>=2.2.1",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 88
target-version = ["py314"]
